@@ -225,7 +225,7 @@ at anytime, and it is ok to initialize more than once.
 Joystick.quit() -> None
 </tt></font><ul>
 After you are completely finished with a joystick device, you
-can use this <a href=pygame.html#quit>quit()</a> function to free access to the drive.
+can use this <a href=pygame_cdrom.html#quit>quit()</a> function to free access to the drive.
 This will be cleaned up automatically when the joystick module is.
 uninitialized. It is safe to call this function on an uninitialized Joystick.
 </ul><br>&nbsp;<br>
