@@ -115,6 +115,11 @@ void initconstants(void)
 	DEC_CONST(JOYBUTTONDOWN);
 	DEC_CONST(JOYBUTTONUP);
 	DEC_CONST(VIDEORESIZE);
+#if SDL_VERSIONNUM(1, 2, 2) <= SDL_VERSIONNUM(SDL_MAJOR_VERSION, SDL_MINOR_VERSION, SDL_PATCHLEVEL) 
+	DEC_CONST(VIDEOEXPOSE);
+#else
+	PyModule_AddIntConstant(module, "VIDEOEXPOSE", 0);
+#endif
 	DEC_CONST(QUIT);
 	DEC_CONST(SYSWMEVENT);
 	DEC_CONST(USEREVENT);
